// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`split-button [snapshot] > contrast, lg 1`] = `
<div>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-contrast vesper-split-button-action-button"
    >
      button text
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-contrast vesper-icon-button vesper-split-button-menu-button"
      id="base-ui-_r_7e_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > contrast, lg, disabled 1`] = `
<div>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-disabled vesper-split-button-action-button"
      disabled=""
    >
      button text
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-disabled vesper-icon-button vesper-split-button-menu-button"
      disabled=""
      id="base-ui-_r_7u_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > contrast, lg, disabled, open 1`] = `
<div
  data-base-ui-inert=""
>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-disabled vesper-split-button-action-button"
      disabled=""
    >
      button text
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <button
      aria-controls="_r_81_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-disabled vesper-icon-button vesper-split-button-menu-button"
      data-popup-open=""
      data-pressed=""
      disabled=""
      id="base-ui-_r_83_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="_r_85_"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`split-button [snapshot] > contrast, lg, open 1`] = `
<div
  data-base-ui-inert=""
>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-contrast vesper-split-button-action-button"
    >
      button text
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <button
      aria-controls="_r_7h_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-contrast vesper-icon-button vesper-split-button-menu-button"
      data-popup-open=""
      data-pressed=""
      id="base-ui-_r_7j_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="_r_7l_"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`split-button [snapshot] > contrast, md 1`] = `
<div>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-contrast vesper-split-button-action-button"
    >
      button text
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-contrast vesper-icon-button vesper-split-button-menu-button"
      id="base-ui-_r_6e_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > contrast, md, disabled 1`] = `
<div>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-disabled vesper-split-button-action-button"
      disabled=""
    >
      button text
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-disabled vesper-icon-button vesper-split-button-menu-button"
      disabled=""
      id="base-ui-_r_6u_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > contrast, md, disabled, open 1`] = `
<div
  data-base-ui-inert=""
>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-disabled vesper-split-button-action-button"
      disabled=""
    >
      button text
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <button
      aria-controls="_r_71_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-disabled vesper-icon-button vesper-split-button-menu-button"
      data-popup-open=""
      data-pressed=""
      disabled=""
      id="base-ui-_r_73_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="_r_75_"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`split-button [snapshot] > contrast, md, open 1`] = `
<div
  data-base-ui-inert=""
>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-contrast vesper-split-button-action-button"
    >
      button text
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <button
      aria-controls="_r_6h_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-contrast vesper-icon-button vesper-split-button-menu-button"
      data-popup-open=""
      data-pressed=""
      id="base-ui-_r_6j_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="_r_6l_"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`split-button [snapshot] > contrast, sm 1`] = `
<div>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-contrast vesper-split-button-action-button"
    >
      button text
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-contrast vesper-icon-button vesper-split-button-menu-button"
      id="base-ui-_r_5e_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > contrast, sm, disabled 1`] = `
<div>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-disabled vesper-split-button-action-button"
      disabled=""
    >
      button text
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-disabled vesper-icon-button vesper-split-button-menu-button"
      disabled=""
      id="base-ui-_r_5u_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > contrast, sm, disabled, open 1`] = `
<div
  data-base-ui-inert=""
>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-disabled vesper-split-button-action-button"
      disabled=""
    >
      button text
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <button
      aria-controls="_r_61_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-disabled vesper-icon-button vesper-split-button-menu-button"
      data-popup-open=""
      data-pressed=""
      disabled=""
      id="base-ui-_r_63_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="_r_65_"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`split-button [snapshot] > contrast, sm, open 1`] = `
<div
  data-base-ui-inert=""
>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-contrast vesper-split-button-action-button"
    >
      button text
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <button
      aria-controls="_r_5h_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-contrast vesper-icon-button vesper-split-button-menu-button"
      data-popup-open=""
      data-pressed=""
      id="base-ui-_r_5j_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="_r_5l_"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`split-button [snapshot] > subtle, lg 1`] = `
<div>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-subtle vesper-split-button-action-button"
    >
      button text
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-subtle vesper-icon-button vesper-split-button-menu-button"
      id="base-ui-_r_4e_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > subtle, lg, disabled 1`] = `
<div>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-disabled vesper-split-button-action-button"
      disabled=""
    >
      button text
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-disabled vesper-icon-button vesper-split-button-menu-button"
      disabled=""
      id="base-ui-_r_4u_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > subtle, lg, disabled, open 1`] = `
<div
  data-base-ui-inert=""
>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-disabled vesper-split-button-action-button"
      disabled=""
    >
      button text
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <button
      aria-controls="_r_51_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-disabled vesper-icon-button vesper-split-button-menu-button"
      data-popup-open=""
      data-pressed=""
      disabled=""
      id="base-ui-_r_53_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="_r_55_"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`split-button [snapshot] > subtle, lg, open 1`] = `
<div
  data-base-ui-inert=""
>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-subtle vesper-split-button-action-button"
    >
      button text
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <button
      aria-controls="_r_4h_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-subtle vesper-icon-button vesper-split-button-menu-button"
      data-popup-open=""
      data-pressed=""
      id="base-ui-_r_4j_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="_r_4l_"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`split-button [snapshot] > subtle, md 1`] = `
<div>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-subtle vesper-split-button-action-button"
    >
      button text
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-subtle vesper-icon-button vesper-split-button-menu-button"
      id="base-ui-_r_3e_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > subtle, md, disabled 1`] = `
<div>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-disabled vesper-split-button-action-button"
      disabled=""
    >
      button text
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-disabled vesper-icon-button vesper-split-button-menu-button"
      disabled=""
      id="base-ui-_r_3u_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > subtle, md, disabled, open 1`] = `
<div
  data-base-ui-inert=""
>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-disabled vesper-split-button-action-button"
      disabled=""
    >
      button text
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <button
      aria-controls="_r_41_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-disabled vesper-icon-button vesper-split-button-menu-button"
      data-popup-open=""
      data-pressed=""
      disabled=""
      id="base-ui-_r_43_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="_r_45_"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`split-button [snapshot] > subtle, md, open 1`] = `
<div
  data-base-ui-inert=""
>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-subtle vesper-split-button-action-button"
    >
      button text
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <button
      aria-controls="_r_3h_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-subtle vesper-icon-button vesper-split-button-menu-button"
      data-popup-open=""
      data-pressed=""
      id="base-ui-_r_3j_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="_r_3l_"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`split-button [snapshot] > subtle, sm 1`] = `
<div>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-subtle vesper-split-button-action-button"
    >
      button text
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-subtle vesper-icon-button vesper-split-button-menu-button"
      id="base-ui-_r_2e_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > subtle, sm, disabled 1`] = `
<div>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-disabled vesper-split-button-action-button"
      disabled=""
    >
      button text
    </button>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-disabled vesper-icon-button vesper-split-button-menu-button"
      disabled=""
      id="base-ui-_r_2u_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > subtle, sm, disabled, open 1`] = `
<div
  data-base-ui-inert=""
>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-disabled vesper-split-button-action-button"
      disabled=""
    >
      button text
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <button
      aria-controls="_r_31_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-disabled vesper-icon-button vesper-split-button-menu-button"
      data-popup-open=""
      data-pressed=""
      disabled=""
      id="base-ui-_r_33_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="_r_35_"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`split-button [snapshot] > subtle, sm, open 1`] = `
<div
  data-base-ui-inert=""
>
  <div
    class="vesper-split-button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-subtle vesper-split-button-action-button"
    >
      button text
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <button
      aria-controls="_r_2h_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-subtle vesper-icon-button vesper-split-button-menu-button"
      data-popup-open=""
      data-pressed=""
      id="base-ui-_r_2j_"
      tabindex="0"
      type="button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="_r_2l_"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      aria-hidden="true"
      data-base-ui-focus-guard=""
      data-type="outside"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;
